--- a/style.css
+++ b/style.css
@@ -112,11 +112,11 @@ body {
 
 /* CSS for pigctures*/
 
-#group-intro {
+#group-intro,#group-projects {
     padding-bottom: var(--margin-b);
     padding-top: var(--margin-t);
-    padding-left: 2vw;
-    padding-right: 2vw ;
+    padding-left: 7vw;
+    padding-right: 7vw ;
 }
 
 .members,
@@ -156,7 +156,46 @@ body {
     font-size: var(--fs-body);
 }
 /* CSS for Projects*/
-
+.projects{
+    padding-top: var(--margin-t);
+}
+.project-1, .project-3{
+    display: grid;
+    grid-template-columns: 40% 55%;
+    grid-gap: 5%;
+    padding-bottom: var(--margin-b);
+}
+.project-title{
+    font-size: var(--fs-body-large);
+    font-family: var(--title-font);
+    text-decoration: underline;
+}
+.project-screenshot{
+    width: 100%;
+    border: 1vw solid;
+    border-color: var(--SD-Secondary);
+}
+.project-2{
+    display: grid;
+    grid-template-columns: 55% 40%;
+    grid-gap: 2%;
+    border-bottom: 0.5vh solid;
+    border-color: var(--SD-Secondary);
+    border-top: 0.5vh solid;
+    padding-bottom: var(--margin-b);
+}
+.project-desc{
+    font-family: var(--body-font);
+    font-size: var(--fs-body);
+    padding-top: 6.5vh;
+    
+}
+/* CSS for Footer */
+#footer{
+    background-color: black;
+    width: 100%;
+    height: 5vh;
+}
 
 
 /*media queries for changing screen sizes*/
