--- a/style.css
+++ b/style.css
@@ -288,12 +288,66 @@ body {
 }
 
 .overview-right img {
-  padding-right: 10px;
   display: flex;
   align-items: right;
   justify-content: right;
+  padding-bottom: 40px;
 }
 
-.resPic {
-  width: 25%;
+.headerBarDiv {
+  text-align: center;
+  border-bottom: 2px solid #333;
+  border-top: 2px solid #333;
+  margin-bottom: 5px;
+}
+
+.headerBar {
+  display: inline;
+  text-align: center;
+  font-size: large;
+}
+
+.headerBar li {
+  display: inline;
+  list-style: none;
+  text-align: center;
+}
+
+.imgWrapper {
+  display: flex;
+  text-align: center;
+}
+
+.resumeOverviewLeft {
+  width: 50%;
+  position: relative;
+  float: left;
+}
+
+.resumeOverviewRight {
+  width: 50%;
+  position: relative;
+  text-align: center;
+  float: left;
+  height: auto;
+}
+
+.sectionWrapper {
+  display: flex;
+}
+
+.educationLeft {
+  width: 50%;
+}
+
+.educationRight {
+  width: 50%;
+}
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
 }
