Resume Content Completed and Styled

--- a/style.css
+++ b/style.css
@@ -316,32 +316,24 @@ body {
 .imgWrapper {
   display: flex;
   text-align: center;
+  padding-bottom: 1vh;
 }
 
 .resumeOverviewLeft {
-  width: 50%;
   position: relative;
-  float: left;
 }
 
 .resumeOverviewRight {
-  width: 50%;
   position: relative;
   text-align: center;
-  float: left;
   height: auto;
 }
 
-.sectionWrapper {
-  display: flex;
-}
-
-.educationLeft {
-  width: 50%;
-}
-
-.educationRight {
-  width: 50%;
+.sectionWrapperThreeSec {
+  font-family: var(--body-font);
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  justify-content: center;
 }
 
 .left {
@@ -350,4 +342,66 @@ body {
 
 .right {
   float: right;
+}
+
+.thuloa-title {
+  font-family: var(--title-font);
+  text-align: center;
+}
+
+header {
+  font-family: var(--title-font);
+}
+
+.resumeOverviewLeft {
+  font-family: var(--body-font);
+}
+
+.sectionWrapper {
+  font-family: var(--body-font);
+  display: grid;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
+}
+
+.profPic {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 2vh;
+}
+
+.job {
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+section {
+  padding-right: 5vw;
+  padding-left: 5vw;
+}
+
+.h-card-thuloa {
+  justify-content: center;
+  text-align: center;
+  border-radius: 10px;
+  border: 2px solid #2d2f37;
+  flex-basis: content;
+}
+
+.cardp {
+  margin: 1vh;
+}
+
+.carda {
+  padding-left: 1vw;
+  padding-right: 1vw;
+}
+
+.skillsWrapper {
+  font-family: var(--body-font);
+}
+
+.body-thuloa {
+  background-color: rgb(205, 205, 228);
 }
