--- a/constitution/style.css
+++ b/constitution/style.css
@@ -1,199 +1,207 @@
 /*Root element with variables to use throughout enter website*/
 :root {
-    /*colors*/
-    --CD-Red: rgb(178, 34, 52);
-    --CD-White: rgb(255, 255, 255);
-    --CD-Blue: rgb(60, 59, 110);
-    /*typography*/
-    --fs-caption: 0.75rem;
-    --fs-body: 1rem;
-    --fs-body-large: 1.25rem;
-    --fs-head: 1.5rem;
-    --fs-head-large: 2rem;
-    /*fonts*/
-    --body-font: 'Inter', sans-serif;
-    --title-font: 'Roboto', sans-serif;
-    /*spacing*/
-    --vertical-margin: 2vh;
-    --horizontal-margin: 15vw;
+  /*colors*/
+  --CD-Red: rgb(178, 34, 52);
+  --CD-White: rgb(255, 255, 255);
+  --CD-Blue: rgb(60, 59, 110);
+  /*typography*/
+  --fs-caption: 0.75rem;
+  --fs-body: 1rem;
+  --fs-body-large: 1.25rem;
+  --fs-head: 1.5rem;
+  --fs-head-large: 2rem;
+  /*fonts*/
+  --body-font: "Inter", sans-serif;
+  --title-font: "Roboto", sans-serif;
+  /*spacing*/
+  --vertical-margin: 2vh;
+  --horizontal-margin: 15vw;
 }
 
 /*basic body styling*/
-html{
-    scroll-padding-top: 12vh;
-    scroll-behavior: smooth;
+html {
+  scroll-padding-top: 12vh;
+  scroll-behavior: smooth;
 }
 body {
-    min-width: 100vw;
-    min-height: 100vh;
-    margin: 0;
-    overflow-x: hidden;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-kerning: normal;
-    text-rendering: optimizeLegibility;
-    text-decoration-skip-ink: auto;
-    image-rendering: auto;
-    -webkit-line-break: normal;
-    -moz-line-break: normal;
-    -ms-line-break: normal;
-    line-break: normal;
-    orphans: 3;
-    widows: 3;
-    hanging-punctuation: first allow-end last;
-    background-image: url(resources/old-paper-texture-background.jpg);
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  overflow-x: hidden;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-kerning: normal;
+  text-rendering: optimizeLegibility;
+  text-decoration-skip-ink: auto;
+  image-rendering: auto;
+  -webkit-line-break: normal;
+  -moz-line-break: normal;
+  -ms-line-break: normal;
+  line-break: normal;
+  orphans: 3;
+  widows: 3;
+  hanging-punctuation: first allow-end last;
+  background-image: url(resources/old-paper-texture-background.jpg);
 }
 
-section{
-    background-color: rgba(255, 255, 255, 0.5);
+section {
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 /*Spacing classes*/
 .sec-vert-format {
-    padding-top: 2vh;
-    padding-bottom: 2vh;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+  padding-top: 2vh;
+  padding-bottom: 2vh;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
 }
 
 .accordion-spacing {
-    padding-bottom: 1vh;
+  padding-bottom: 1vh;
 }
-
 
 /*Website Header and navbar*/
 .CD-header {
-    background: rgba(0, 0, 0, 0.9);
-    padding-top: var(--vertical-margin);
+  background: rgba(0, 0, 0, 0.9);
+  padding-top: var(--vertical-margin);
 }
 
 .blue-text {
-    background-image: radial-gradient(rgba(255, 255, 255, 1)10%, transparent 0);
-    -webkit-background-clip: text;
-    background-clip: text;
-    background-size: 7px 7px;
-    background-color: var(--CD-Blue);
-    color: transparent;
-    background-repeat: repeat;
+  background-image: radial-gradient(rgba(255, 255, 255, 1) 10%, transparent 0);
+  -webkit-background-clip: text;
+  background-clip: text;
+  background-size: 7px 7px;
+  background-color: var(--CD-Blue);
+  color: transparent;
+  background-repeat: repeat;
 }
 
 .CD-title {
-    text-align: center;
-    font-family: var(--title-font);
-    font-size: var(--fs-head-large);
-    background-image: linear-gradient(180deg, rgba(178, 34, 52, 1) 10%, rgba(255, 255, 255, 1) 20%, rgba(178, 34, 52, 1) 30%, rgba(255, 255, 255, 1) 40%, rgba(178, 34, 52, 1) 50%, rgba(255, 255, 255, 1) 60%, rgba(178, 34, 52, 1) 70%, rgba(255, 255, 255, 1) 80%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
+  text-align: center;
+  font-family: var(--title-font);
+  font-size: var(--fs-head-large);
+  background-image: linear-gradient(
+    180deg,
+    rgba(178, 34, 52, 1) 10%,
+    rgba(255, 255, 255, 1) 20%,
+    rgba(178, 34, 52, 1) 30%,
+    rgba(255, 255, 255, 1) 40%,
+    rgba(178, 34, 52, 1) 50%,
+    rgba(255, 255, 255, 1) 60%,
+    rgba(178, 34, 52, 1) 70%,
+    rgba(255, 255, 255, 1) 80%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .nav-item {
-    padding-left: 0.5vw;
-    padding-right: 0.5vw;
-    padding-top: 0.5vh;
+  padding-left: 0.5vw;
+  padding-right: 0.5vw;
+  padding-top: 0.5vh;
 }
 
 a.nav-link {
-    padding: 0.1vw;
-    background-color: var(--CD-Blue);
-    border-radius: 10px;
-    font-family: var(--body-font);
-    font-size: var(--fs-body);
-    color: white;
-    border: 1px var(--CD-Red) solid;
-    text-align: center
+  padding: 0.1vw;
+  background-color: var(--CD-Blue);
+  border-radius: 10px;
+  font-family: var(--body-font);
+  font-size: var(--fs-body);
+  color: white;
+  border: 1px var(--CD-Red) solid;
+  text-align: center;
 }
 
 /* Drop Down menu styling */
 ul.dropdown-menu {
-    --bs-dropdown-link-active-bg: var(--CD-Blue);
-    border-color: var(--CD-Red);
+  --bs-dropdown-link-active-bg: var(--CD-Blue);
+  border-color: var(--CD-Red);
 }
 
 a.dropdown-item {
-    color: var(--CD-Blue);
+  color: var(--CD-Blue);
 }
 
 /* Font Styling Classes*/
 
 .CD-title-2 {
-    font-family: var(--title-font);
-    text-align: center;
-    font-size: var(--fs-head-large);
+  font-family: var(--title-font);
+  text-align: center;
+  font-size: var(--fs-head-large);
 }
 
 .CD-head {
-    font-family: var(--body-font);
-    font-size: var(--fs-head);
+  font-family: var(--body-font);
+  font-size: var(--fs-head);
 }
 
 .CD-body {
-    font-family: var(--body-font);
-    font-size: var(--fs-body);
+  font-family: var(--body-font);
+  font-size: var(--fs-body);
 }
 
 /* Custom styling for boostrap accordion */
 div.accordion {
-    --bs-accordion-btn-focus-border-color: none;
-    --bs-accordion-active-color: var(--CD-White);
-    --bs-accordion-active-bg: rgba(60, 59, 110, 0.75);
-    --bs-accordion-border-color: none;
-    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(178, 34, 52,1);
-    --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-
+  --bs-accordion-btn-focus-border-color: none;
+  --bs-accordion-active-color: var(--CD-White);
+  --bs-accordion-active-bg: rgba(60, 59, 110, 0.75);
+  --bs-accordion-border-color: none;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(178, 34, 52, 1);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
 }
 
-button.accordion-button{
-    font-family: var(--title-font);
-    font-size: var(--fs-head);
-    align-content: center;
+button.accordion-button {
+  font-family: var(--title-font);
+  font-size: var(--fs-head);
+  align-content: center;
 }
 /* Footer styling */
-footer{
-    background-color: rgba(0, 0, 0, 0.9);
-    margin-bottom: 0;
-    text-align: center;
+footer {
+  background-color: rgba(0, 0, 0, 0.9);
+  margin-bottom: 0;
+  text-align: center;
 }
 
-.footer-link{
-    color: var(--CD-Red);
+.footer-link {
+  color: var(--CD-Red);
 }
-.footer-link:hover{
-    color: white;
+.footer-link:hover {
+  color: white;
 }
 
 /*media queries for changing screen sizes*/
 @media only screen and (min-width: 280px) {
-    :root {
-        font-size: 70%;
-    }
+  :root {
+    font-size: 70%;
+  }
 }
 
 @media only screen and (min-width: 576px) {
-    :root {
-        font-size: 85%;
-    }
+  :root {
+    font-size: 85%;
+  }
 }
 
 @media only screen and (min-width: 768px) {
-    :root {
-        font-size: 90%;
-    }
+  :root {
+    font-size: 90%;
+  }
 }
 
 @media only screen and (min-width: 992px) {
-    :root {
-        font-size: 95%;
-    }
+  :root {
+    font-size: 95%;
+  }
 }
 
 @media only screen and (min-width: 1200px) {
-    :root {
-        font-size: 100%;
-    }
+  :root {
+    font-size: 100%;
+  }
 }
 
 @media only screen and (min-width: 1400px) {
-    :root {
-        font-size: 110%;
-    }
+  :root {
+    font-size: 110%;
+  }
 }
