--- a/constitution/style.css
+++ b/constitution/style.css
@@ -133,11 +133,13 @@ a.dropdown-item {
 .CD-head {
   font-family: var(--body-font);
   font-size: var(--fs-head);
+  text-align: center;
 }
 
 .CD-body {
   font-family: var(--body-font);
   font-size: var(--fs-body);
+  text-align: center;
 }
 
 /* Custom styling for boostrap accordion */
@@ -148,6 +150,8 @@ div.accordion {
   --bs-accordion-border-color: none;
   --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(178, 34, 52, 1);
   --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='var%28--bs-body-color%29'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  margin: auto;
+  width: 60%;
 }
 
 button.accordion-button {
