--- a/constitution/style.css
+++ b/constitution/style.css
@@ -23,6 +23,7 @@ html {
   scroll-padding-top: 12vh;
   scroll-behavior: smooth;
 }
+
 body {
   min-width: 100vw;
   min-height: 100vh;
@@ -79,17 +80,15 @@ section {
   text-align: center;
   font-family: var(--title-font);
   font-size: var(--fs-head-large);
-  background-image: linear-gradient(
-    180deg,
-    rgba(178, 34, 52, 1) 10%,
-    rgba(255, 255, 255, 1) 20%,
-    rgba(178, 34, 52, 1) 30%,
-    rgba(255, 255, 255, 1) 40%,
-    rgba(178, 34, 52, 1) 50%,
-    rgba(255, 255, 255, 1) 60%,
-    rgba(178, 34, 52, 1) 70%,
-    rgba(255, 255, 255, 1) 80%
-  );
+  background-image: linear-gradient(180deg,
+      rgba(178, 34, 52, 1) 10%,
+      rgba(255, 255, 255, 1) 20%,
+      rgba(178, 34, 52, 1) 30%,
+      rgba(255, 255, 255, 1) 40%,
+      rgba(178, 34, 52, 1) 50%,
+      rgba(255, 255, 255, 1) 60%,
+      rgba(178, 34, 52, 1) 70%,
+      rgba(255, 255, 255, 1) 80%);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -133,13 +132,11 @@ a.dropdown-item {
 .CD-head {
   font-family: var(--body-font);
   font-size: var(--fs-head);
-  text-align: center;
 }
 
 .CD-body {
   font-family: var(--body-font);
   font-size: var(--fs-body);
-  text-align: center;
 }
 
 /* Custom styling for boostrap accordion */
@@ -159,6 +156,7 @@ button.accordion-button {
   font-size: var(--fs-head);
   align-content: center;
 }
+
 /* Footer styling */
 footer {
   background-color: rgba(0, 0, 0, 0.9);
@@ -169,6 +167,7 @@ footer {
 .footer-link {
   color: var(--CD-Red);
 }
+
 .footer-link:hover {
   color: white;
 }
